--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -20,6 +20,10 @@ jobs:
         distribution: 'temurin'
         cache: maven
     
+    - name: Make mvnw executable
+      working-directory: ./java-assignment
+      run: chmod +x mvnw
+    
     - name: Run Maven Clean
       working-directory: ./java-assignment
       run: ./mvnw clean
