Fix: add test profile configuration to application.properties and improve test database setup

--- a/java-assignment/src/main/resources/application.properties
+++ b/java-assignment/src/main/resources/application.properties
@@ -5,6 +5,13 @@
 %prod.quarkus.datasource.jdbc.max-size=8
 %prod.quarkus.datasource.jdbc.min-size=2
 
+# Test Profile Configuration - H2 In-Memory Database
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false;MODE=PostgreSQL
+%test.quarkus.datasource.username=sa
+%test.quarkus.datasource.password=
+%test.quarkus.datasource.jdbc.driver=org.h2.Driver
+
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=import.sql
