--- a/java-assignment/src/test/resources/application-test.properties
+++ b/java-assignment/src/test/resources/application-test.properties
@@ -1,12 +1,22 @@
 # Test Configuration - H2 In-Memory Database
+quarkus.profile=test
 quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
+quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false;MODE=PostgreSQL
 quarkus.datasource.username=sa
 quarkus.datasource.password=
 
 # Hibernate Configuration for Tests
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.sql-load-script=import.sql
 
-# Disable validation
+# Disable devservices
+quarkus.datasource.devservices.enabled=false
+
+# OpenAPI config
+quarkus.openapi.generator.spec=warehouse-openapi.yaml
+quarkus.openapi.generator.base-package=com.warehouse.api
+
+# H2 Driver
 quarkus.datasource.jdbc.driver=org.h2.Driver
+
