--- a/java-assignment/pom.xml
+++ b/java-assignment/pom.xml
@@ -141,6 +141,7 @@
                     </execution>
                     <execution>
                         <id>jacoco-check</id>
+                        <phase>test</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
