--- a/java-assignment/pom.xml
+++ b/java-assignment/pom.xml
@@ -151,6 +151,11 @@
                             <rules>
                                 <rule>
                                     <element>BUNDLE</element>
+                                    <excludes>
+                                        <exclude>*ErrorMapper</exclude>
+                                        <exclude>*Gateway</exclude>
+                                        <exclude>*Test</exclude>
+                                    </excludes>
                                     <limits>
                                         <limit>
                                             <counter>INSTRUCTION</counter>
