--- a/java-assignment/pom.xml
+++ b/java-assignment/pom.xml
@@ -139,6 +139,35 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>jacoco-check</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <includes>
+                                        <include>com.fulfilment.application.monolith.*</include>
+                                        <include>com.warehouse.api.beans.*</include>
+                                    </includes>
+                                    <excludes>
+                                        <exclude>*Test</exclude>
+                                        <exclude>*.ErrorMapper</exclude>
+                                    </excludes>
+                                    <limits>
+                                        <limit>
+                                            <counter>INSTRUCTION</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.80</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
