--- a/java-assignment/src/main/resources/application.properties
+++ b/java-assignment/src/main/resources/application.properties
@@ -18,6 +18,7 @@ quarkus.hibernate-orm.sql-load-script=import.sql
 
 quarkus.openapi.generator.spec=warehouse-openapi.yaml
 quarkus.openapi.generator.base-package=com.warehouse.api
+quarkus.swagger-ui.always-include=true
 
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=quarkus_test
