--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Build, Test & Validate
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main, develop ]
 
 jobs:
-  build:
+  build-test-validate:
     runs-on: ubuntu-latest
 
     strategy:
@@ -32,6 +32,10 @@ jobs:
       run: mvn test -B
       working-directory: ./java-assignment
 
+    - name: Validate code coverage (80%+ required)
+      run: mvn jacoco:check -B
+      working-directory: ./java-assignment
+
     - name: Generate JaCoCo coverage report
       run: mvn jacoco:report -B
       working-directory: ./java-assignment
@@ -47,7 +51,7 @@ jobs:
 
   code-quality:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-test-validate
 
     steps:
     - uses: actions/checkout@v4
