--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -76,7 +76,7 @@ jobs:
 
   security-scan:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-test-validate
 
     steps:
     - uses: actions/checkout@v4
