fix: optimize Maven build steps and remove redundant jacoco:check execution - Remove separate 'mvn test' step (already included in 'mvn verify') - Remove separate 'mvn jacoco:check' step (already configured in pom.xml execution) - Consolidate into single 'mvn verify' which includes:   * Compilation   * Unit test execution   * JaCoCo coverage report generation   * JaCoCo check validation (80%+ enforced) - Fix 'The parameters rules for goal org.jacoco:maven-plugin are missing' error - Keep 'mvn jacoco:report' as optional for detailed report generation - Add inline comments explaining Maven goal behaviors

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -24,21 +24,19 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Build with Maven
+    - name: Build, Test and Validate Code Coverage with Maven
       run: mvn clean verify -B
       working-directory: ./java-assignment
+      # Note: mvn verify includes:
+      #   - Compilation
+      #   - Unit tests execution
+      #   - JaCoCo coverage report generation
+      #   - JaCoCo check validation (80%+ minimum enforced by pom.xml configuration)
 
-    - name: Run tests
-      run: mvn test -B
-      working-directory: ./java-assignment
-
-    - name: Validate code coverage (80%+ required)
-      run: mvn jacoco:check -B
-      working-directory: ./java-assignment
-
-    - name: Generate JaCoCo coverage report
+    - name: Generate JaCoCo coverage report (additional)
       run: mvn jacoco:report -B
       working-directory: ./java-assignment
+      continue-on-error: true
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
