--- a/java-assignment/.github/workflows/build.yml
+++ b/java-assignment/.github/workflows/build.yml
@@ -30,6 +30,10 @@ jobs:
       working-directory: ./java-assignment
       run: mvn jacoco:report
 
+    - name: List coverage files
+      working-directory: ./java-assignment
+      run: find target -name "jacoco*" -type f
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
@@ -37,6 +41,8 @@ jobs:
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
+        verbose: true
+        token: ${{ secrets.CODECOV_TOKEN }}
 
     - name: Upload Test Results
       if: always()
